test/positive/test5_no_optional.drift
monitor BareBone {
    source: stream
    baseline: static
    drift_check every 10_minutes {
        method: psi
        threshold: 0.1
        alert: log
    }
}